<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flatland_server</name>
  <version>2.0.0</version>
  <description>The flatland_server package</description>
  <license>BSD</license>
  <url type="website">https://github.com/avidbots/flatland</url>

  <maintainer email="joseph@avidbots.com">Joseph Duchesne</maintainer>
  <author email="joseph@avidbots.com">Joseph Duchesne</author>
  <author>Chunshang Li</author>
  <author>Mike Brousseau</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>OpenCV</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp-vendor</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>flatland_msgs</depend>
  <depend>lua-dev</depend>
  <depend>box2d-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
