<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flatland_server</name>
  <version>2.0.0</version>
  <description>The flatland_server package</description>
  <license>BSD</license>
  <url type="website">https://github.com/avidbots/flatland</url>

  <maintainer email="joseph@avidbots.com">Joseph Duchesne</maintainer>
  <author email="joseph@avidbots.com">Joseph Duchesne</author>
  <author>Chunshang Li</author>
  <author>Mike Brousseau</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>flatland_msgs</depend>
  <depend>lua-dev</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>libboost-dev</depend>
  <depend>flatland_box2d</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
